--- a/Used_Car_Price_Prediction_Adit.ipynb
+++ b/Used_Car_Price_Prediction_Adit.ipynb
@@ -131,7 +131,9 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"used_car_dataset.csv\")"
+    "used_car_dataset = 'https://raw.githubusercontent.com/Adityaarpita1234/Used-Car-Price-Prediction_Adit/main/used_car_dataset.csv'\n",
+    "\n",
+    "df = pd.read_csv(used_car_dataset)"
    ]
   },
   {
@@ -2236,6 +2238,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
     "mae=mean_absolute_error(y_test,y_pred)\n",
     "score=r2_score(y_test,y_pred)"
    ]
